# SpaceX-Data-Pipeline

./: README.md  config.json  output.json  pandas_intro.py  pyproject.toml  spacex_api.py
tap-spacex/: tap_spacex.py
typings/singer/: __init__.pyi  bookmarks.pyi  catalog.pyi  exceptions.pyi  logger.pyi  messages.pyi  metadata.pyi  metrics.pyi  requests.pyi  schema.pyi  statediff.pyi  transform.pyi  utils.pyi
